--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-dressup-game",
-  "homepage": "https://meramos.github.com/React_Dressup_Game",
+  "homepage": "/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
